Bug 750012 - Fix assertion error in nsIMAPGenericParser::CreateParenGroup(). r=dbienvenu